thêm cái xoay xoay slide

--- a/app/src/main/res/layout/activity_book_detail.xml
+++ b/app/src/main/res/layout/activity_book_detail.xml
@@ -8,19 +8,19 @@
 
     <TextView
         android:id="@+id/tvBookDetailTitle"
-        android:layout_width="219dp"
-        android:layout_height="66dp"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="13dp"
+        android:layout_width="387dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="10dp"
         android:ellipsize="end"
         android:fontFamily="sans-serif"
         android:maxLines="2"
         android:text="@string/test_lorem_long"
         android:textSize="25sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailAuthorK"
-        app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
@@ -28,13 +28,12 @@
         android:layout_width="@dimen/book_width"
         android:layout_height="@dimen/book_height"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginBottom="4dp"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toTopOf="@+id/tvBookDetailDescriptionK"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.154"
+        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailTitle"
         app:srcCompat="@android:drawable/dialog_frame" />
 
     <TextView
@@ -51,11 +50,13 @@
 
     <TextView
         android:id="@+id/tvBookDetailAuthorV"
-        android:layout_width="161dp"
+        android:layout_width="160dp"
         android:layout_height="20dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="12dp"
+        android:layout_marginEnd="7dp"
         android:text="@string/test_lorem_short"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvBookDetailAuthorK"
         app:layout_constraintTop_toBottomOf="@+id/tvBookDetailTitle" />
 
@@ -98,7 +99,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent" />
 
-
     <TextView
         android:id="@+id/tvBookDetailChapterListK"
         android:layout_width="124dp"
@@ -112,40 +112,39 @@
 
     <RatingBar
         android:id="@+id/rbBookDetailRating"
-        android:layout_width="237dp"
-        android:layout_height="41dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="233dp"
+        android:layout_height="39dp"
+        android:layout_marginEnd="17dp"
+        android:layout_marginBottom="12dp"
         android:isIndicator="false"
         android:numStars="5"
         android:scaleX=".8"
         android:scaleY=".9"
         android:transformPivotX="20dp"
         android:transformPivotY="0dp"
-        app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
-        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailCategories" />
+        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailDescriptionV"
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/btnBookDetailReadFirst"
         android:layout_width="120dp"
         android:layout_height="52dp"
-        android:layout_marginStart="77dp"
-        android:layout_marginEnd="22dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/btn_read_first"
-        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailDescriptionV"
+        app:layout_constraintBottom_toTopOf="@+id/rbBookDetailRating"
         app:layout_constraintEnd_toStartOf="@+id/btnBookDetailReadLast"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover" />
 
     <Button
         android:id="@+id/btnBookDetailReadLast"
         android:layout_width="120dp"
         android:layout_height="52dp"
-        android:layout_marginStart="22dp"
-        android:layout_marginEnd="72dp"
-        android:layout_marginBottom="32dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/btn_read_last"
-        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailDescriptionV"
+        app:layout_constraintBottom_toTopOf="@+id/rbBookDetailRating"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnBookDetailReadFirst" />
 
@@ -154,12 +153,34 @@
         android:layout_width="221dp"
         android:layout_height="41dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="22dp"
-        app:layout_constraintBottom_toTopOf="@+id/rbBookDetailRating"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
+        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailViewCountK" />
+
+    <TextView
+        android:id="@+id/tvBookDetailViewCountK"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="15dp"
+        android:text="@string/view_count"
+        app:layout_constraintBottom_toTopOf="@+id/tvBookDetailCategories"
         app:layout_constraintStart_toEndOf="@+id/ivBookDetailCover"
         app:layout_constraintTop_toBottomOf="@+id/tvBookDetailAuthorK" />
+
+    <TextView
+        android:id="@+id/tvBookDetailViewCountV"
+        android:layout_width="160dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="22dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="7dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/tvBookDetailViewCountK"
+        app:layout_constraintTop_toBottomOf="@+id/tvBookDetailAuthorV" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
