--- a/app/src/main/res/layout/fragment_comment_item.xml
+++ b/app/src/main/res/layout/fragment_comment_item.xml
@@ -9,17 +9,15 @@
         android:id="@+id/tvCommentItemFullname"
         android:layout_width="100dp"
         android:layout_height="24dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="12dp"
         android:fontFamily="@font/open_sans"
         android:maxLines="1"
         android:text="@string/test_lorem_short"
         android:textAlignment="viewStart"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/tvCommentItemContent"
-        app:layout_constraintStart_toEndOf="@+id/ivCommentItemAvatar"
-        app:layout_constraintTop_toBottomOf="@+id/tvCommentItemLastUpdatedAtK" />
+        app:layout_constraintStart_toEndOf="@+id/ivCommentItemAvatar" />
 
     <ImageView
         android:id="@+id/ivCommentItemAvatar"
@@ -33,37 +31,36 @@
 
     <TextView
         android:id="@+id/tvCommentItemContent"
-        android:layout_width="214dp"
-        android:layout_height="51dp"
+        android:layout_width="321dp"
+        android:layout_height="65dp"
         android:layout_marginStart="7dp"
         android:nestedScrollingEnabled="true"
         android:padding="4dp"
         android:text="@string/test_lorem_long"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/ivCommentItemAvatar" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/ivCommentItemAvatar"
+        tools:layout_editor_absoluteY="62dp" />
 
     <TextView
         android:id="@+id/tvCommentItemIsEdited"
         android:layout_width="100dp"
         android:layout_height="19dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginBottom="4dp"
         android:text="@string/is_edited"
         android:textColor="@color/blue"
-        app:layout_constraintBottom_toTopOf="@+id/tvCommentItemContent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvCommentItemLastUpdatedAtV" />
+        tools:layout_editor_absoluteX="231dp"
+        tools:layout_editor_absoluteY="30dp" />
 
     <TextView
         android:id="@+id/tvCommentItemLastUpdatedAtK"
         android:layout_width="80dp"
         android:layout_height="15dp"
         android:layout_marginStart="8dp"
+        android:layout_marginBottom="13dp"
         android:maxLines="1"
-        android:textSize="12sp"
         android:text="@string/update_at_prefix"
-        app:layout_constraintEnd_toStartOf="@+id/tvCommentItemLastUpdatedAtV"
+        android:textSize="12sp"
+        app:layout_constraintBottom_toTopOf="@+id/tvCommentItemFullname"
         app:layout_constraintStart_toEndOf="@+id/ivCommentItemAvatar"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,4 +75,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tvCommentItemLastUpdatedAtK"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnCommentItemEditSave"
+        android:layout_width="57dp"
+        android:layout_height="19dp"
+        android:text="Button"
+        tools:layout_editor_absoluteX="261dp"
+        tools:layout_editor_absoluteY="130dp" />
+
+    <Button
+        android:id="@+id/btnCommentItemEditCancel"
+        android:layout_width="80dp"
+        android:layout_height="24dp"
+        android:text="Button"
+        tools:layout_editor_absoluteX="325dp"
+        tools:layout_editor_absoluteY="128dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
