--- a/app/src/main/res/layout/activity_main_book_item.xml
+++ b/app/src/main/res/layout/activity_main_book_item.xml
@@ -3,9 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:background="@drawable/border"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:padding="5dp"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/ivMainBookItemCoverImage"
