--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,5 @@
     <color name="divider">#04C6D8</color>
     <color name="text_color">#212121</color>
     <color name="background_color">#FFFFFF</color>
+    <color name="blue_dark">#064F65</color>
 </resources>
