--- a/app/src/main/res/layout/activity_main_hot_book_item.xml
+++ b/app/src/main/res/layout/activity_main_hot_book_item.xml
@@ -1,26 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/ivMainHotBookCover"
-        android:layout_width="412dp"
-        android:layout_height="510dp"
+        android:layout_width="@dimen/book_width"
+        android:layout_height="@dimen/book_height"
         android:contentDescription="@string/book_cover_description"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/flash_screen" />
+        app:srcCompat="@drawable/flash_screen"
+        tools:layout_editor_absoluteX="147dp" />
 
     <TextView
         android:id="@+id/tvMainHotBookName"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:layout_marginTop="8dp"
         android:textSize="20sp"
+        android:gravity="center_horizontal"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivMainHotBookCover" />
 </androidx.constraintlayout.widget.ConstraintLayout>
