--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,10 +16,11 @@
         android:id="@+id/vp2ListHotBook"
         android:layout_height="0dp"
         android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="20dp"
-        android:layout_weight="0.5"
+        android:layout_width="200dp"
+        android:layout_gravity="center_horizontal"
         android:clipChildren="false"
-        android:layout_width="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_weight="0.7"
         android:clipToPadding="false"
         android:paddingStart="20dp"
         android:paddingEnd="20dp" />
